# applifting

./: README.md
ms/: OffersSyncJob.py  __init__.py  consts.py  core.py  dbModels.py  interface.py  offersConnector.py  setup.cfg
tests/: conftest.py  interface_test.py  offersConnector_test.py
