[metadata]
name = ms
version = attr: ms.__version__
author = Krafčišin
author_email = zebyja@gmail.com
description = Assigment for Applifting.

[options]
packages = find:
include_package_data = true
python_requires = >= 3.7
install_requires =
    Flask
    Flask-SQLAlchemy

[options.extras_require]
test =
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
source = ms